[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/ship-btn.png" type="Texture" id=2]
[ext_resource path="res://assets/images/harbor-btn.png" type="Texture" id=3]
[ext_resource path="res://assets/images/harbor-btn-hover.png" type="Texture" id=4]
[ext_resource path="res://assets/images/goods/goods-grain.png" type="Texture" id=5]
[ext_resource path="res://prefabs/harbor_map_button/HarborMapButton.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HarborMapButton" type="Control"]
margin_right = 41.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="Button" type="TextureButton" parent="."]
margin_left = -29.0
margin_top = -29.0
margin_right = 29.0
margin_bottom = 29.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="ShipIcon" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -83.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 61.0
color = Color( 0.137255, 0.137255, 0.137255, 0.862745 )

[node name="Label" type="Label" parent="."]
margin_left = -83.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.945098, 0.905882, 0.701961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Harbor Name"
align = 1
valign = 1

[node name="Need" type="Sprite" parent="."]
position = Vector2( 23.692, -30.3125 )
scale = Vector2( 0.468283, 0.468283 )
texture = ExtResource( 5 )

[node name="NeedTooltip" type="ColorRect" parent="."]
margin_left = 6.0
margin_top = -46.0
margin_right = 42.0
margin_bottom = -15.0
color = Color( 1, 1, 1, 0 )

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
